--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 django==5.0.4
-nltk
-spacy
-tensorflow
-numpy
-scikit-learn
+nltk==3.8.1
+spacy==3.7.4
+tensorflow==2.16.1
+numpy==1.26.4
+scikit-learn==1.4.2
